--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,28 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-c6-devkitc-1]
+[env:esp32c6-supermini]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
+; The board is actuall an ESP32-C6 SuperMini (with an ESP32-C6FH4 SOC), but the ESP32-C6 DevKitC-1 is the closest match in the PlatformIO board registry
 board = esp32-c6-devkitc-1
 framework = arduino, espidf
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder, colorize
+
 board_build.flash_mode = qio
+board_build.f_flash = 40000000L
+board_build.flash_size = 4M
+board_upload.flash_size = 4MB
+
 board_build.embed_txtfiles =
     managed_components/espressif__esp_insights/server_certs/https_server.crt
     managed_components/espressif__esp_rainmaker/server_certs/rmaker_mqtt_server.crt
     managed_components/espressif__esp_rainmaker/server_certs/rmaker_claim_service_server.crt
     managed_components/espressif__esp_rainmaker/server_certs/rmaker_ota_server.crt
+lib_deps =
+    adafruit/Adafruit NeoPixel@^1.12
+	https://github.com/me-no-dev/AsyncTCP.git#master
+	https://github.com/me-no-dev/ESPAsyncWebServer.git#master
+	paulstoffregen/Time @ ^1.6.1
+	sensorium/Mozzi@^2.0.2	
+	
