--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,8 @@
-idf_component_register(SRCS "main.cpp")
+idf_component_register(SRCS
+    "main.cpp"
+    "led_driver.cpp"
+    "rtc_mesh_map.cpp"
+    "power_manager.cpp"
+    "mesh_manager.cpp"
+    "debug_menu.cpp"
+)
