Implemented a LedDriver class for Status and Ws2812 leds.

--- a/.vscode/ext.config.json
+++ b/.vscode/ext.config.json
@@ -1,5 +1,6 @@
 {
     "disabled": [
+        "twxs.cmake",
         "espressif.esp-idf-extension",
         "nordic-semiconductor.nrf-connect",
         "nordic-semiconductor.nrf-connect-extension-pack",
