--- a/platformio.ini
+++ b/platformio.ini
@@ -8,28 +8,63 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32c6-supermini]
+[platformio]
+default_envs = esp32c6-supermini
+cache_dir = g:/.pio/cache
+build_cache_dir = g:/.pio/build_cache
+
+[env]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
-; The board is actuall an ESP32-C6 SuperMini (with an ESP32-C6FH4 SOC), but the ESP32-C6 DevKitC-1 is the closest match in the PlatformIO board registry
-board = esp32-c6-devkitc-1
 framework = arduino, espidf
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, colorize
+
 
 board_build.flash_mode = qio
 board_build.f_flash = 40000000L
 board_build.flash_size = 4M
 board_upload.flash_size = 4MB
 
+; Dummy certs — pioarduino hardcodes target_add_binary_data() for these symbols.
+; The real managed_components dirs are gone (custom_component_remove), so we
+; provide empty stubs to satisfy the linker.
 board_build.embed_txtfiles =
-    managed_components/espressif__esp_insights/server_certs/https_server.crt
-    managed_components/espressif__esp_rainmaker/server_certs/rmaker_mqtt_server.crt
-    managed_components/espressif__esp_rainmaker/server_certs/rmaker_claim_service_server.crt
-    managed_components/espressif__esp_rainmaker/server_certs/rmaker_ota_server.crt
+    certs/https_server.crt
+    certs/rmaker_mqtt_server.crt
+    certs/rmaker_claim_service_server.crt
+    certs/rmaker_ota_server.crt
+
+; Remove unused managed components pulled by pioarduino's idf_component.yml.
+; Transitive deps (json_generator, json_parser, esp_schedule, esp_secure_cert_mgr,
+; esp-serial-flasher, esp_rcp_update, jsmn) disappear when their parents are removed.
+custom_component_remove =
+    espressif/esp-zigbee-lib
+    espressif/esp-zboss-lib
+    espressif/esp_rainmaker
+    espressif/rmaker_common
+    espressif/network_provisioning
+    espressif/qrcode
+    espressif/esp_insights
+    espressif/esp_diagnostics
+    espressif/esp_diag_data_store
+    espressif/esp-modbus
+    espressif/esp_modem
+    espressif/cbor
+
 lib_deps =
     adafruit/Adafruit NeoPixel@^1.12
 	https://github.com/me-no-dev/AsyncTCP.git#master
 	https://github.com/me-no-dev/ESPAsyncWebServer.git#master
 	paulstoffregen/Time @ ^1.6.1
-	sensorium/Mozzi@^2.0.2	
+	sensorium/Mozzi@^2.0.2
+
+[env:esp32c6-supermini]
+; The board is actually an ESP32-C6 SuperMini (ESP32-C6FH4, 4MB flash),
+; but esp32-c6-devkitc-1 is the closest match in the PlatformIO board registry.
+; That board JSON declares 8MB — override for correct size reporting.
+board = esp32-c6-devkitc-1
+board_upload.maximum_size = 4194304
+
 	
+;[env:esp32c3-supermini]
+;board = nologo_esp32c3_super_mini
