Corrected the USB_CDC config, corrected the debug menu marquee and improved the LedDriver.

--- a/.vscode/ext.config.json
+++ b/.vscode/ext.config.json
@@ -6,6 +6,6 @@
         "nordic-semiconductor.nrf-connect-extension-pack",
         "nordic-semiconductor.nrf-devicetree"
     ],
-    "autoReload": true,
+    "autoReload": false,
     "openInNewWindow": true
 }
