--- a/platformio.ini
+++ b/platformio.ini
@@ -10,20 +10,20 @@
 
 [platformio]
 default_envs = esp32c6-supermini
-cache_dir = g:/.pio/cache
-build_cache_dir = g:/.pio/build_cache
 
 [env]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 framework = arduino, espidf
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, colorize
+build_flags = -DARDUINO_USB_CDC_ON_BOOT=1 -DARDUINO_USB_MODE=1
 
 
 board_build.flash_mode = qio
 board_build.f_flash = 40000000L
 board_build.flash_size = 4M
 board_upload.flash_size = 4MB
+board_build.partitions = partitions.csv
 
 ; Dummy certs — pioarduino hardcodes target_add_binary_data() for these symbols.
 ; The real managed_components dirs are gone (custom_component_remove), so we
