Implemented distributed NVS config management and its CLI commands

--- a/platformio.ini
+++ b/platformio.ini
@@ -57,6 +57,7 @@ lib_deps =
 	https://github.com/me-no-dev/ESPAsyncWebServer.git#master
 	paulstoffregen/Time @ ^1.6.1
 	sensorium/Mozzi@^2.0.2
+	bblanchon/ArduinoJson@^7
 
 [env:esp32c6-supermini]
 ; The board is actually an ESP32-C6 SuperMini (ESP32-C6FH4, 4MB flash),
